--- a/Cueva_Isaac.ipynb
+++ b/Cueva_Isaac.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPRt1Z83V907aOWFPaiSJR+"
+      "authorship_tag": "ABX9TyNOqRuuwlJp1ggdidqnS9g3"
     },
     "kernelspec": {
       "name": "python3",
@@ -975,6 +975,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Según el gráfico de clústeres K-Means sobre PCA1 vs PCA2, podemos concluir que los clientes han sido exitosamente segmentados en cuatro grupos distintos, basándose en sus patrones de compra subyacentes capturados por las dos primeras componentes principales. La existencia de estas agrupaciones diferenciadas, respaldada por un Silhouette Score de 0.406, sugiere que existen perfiles de comportamiento de cliente únicos que pueden ser identificados y analizados para estrategias de marketing o servicio personalizadas, aunque se reconoce que esta visualización en 2D solo representa una parte de la variabilidad total de los datos."
+      ],
+      "metadata": {
+        "id": "vG0VWist7cyC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "##Paso 6: Análisis e interpretación de los clústeres"
       ],
       "metadata": {
@@ -982,10 +991,146 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "14. Mostrar el conteo de usuarios por clúster."
+      ],
+      "metadata": {
+        "id": "d_0rAaSy72rw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Conteo de usuarios por clúster:\")\n",
+        "predictions_opt.groupBy(\"prediction\").count().orderBy(\"prediction\").show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "guHMlLGx5bvy",
+        "outputId": "80bfd59d-77fe-4dc0-f048-3caa6b537981"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Conteo de usuarios por clúster:\n",
+            "+----------+-----+\n",
+            "|prediction|count|\n",
+            "+----------+-----+\n",
+            "|         0|27281|\n",
+            "|         1|14203|\n",
+            "|         2|26633|\n",
+            "|         3|30801|\n",
+            "+----------+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "15. Calcular estadísticas por clúster: promedio de carrito, tasa de reorden, etc."
+      ],
+      "metadata": {
+        "id": "wAm3Mxx378f_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "clustered_users = predictions_opt.join(user_agg_clean, \"user_id\", \"inner\")\n",
+        "\n",
+        "# Agrupar por la columna 'prediction' (el clúster asignado) y calcular el promedio de las características\n",
+        "print(\"\\nEstadísticas promedio por clúster:\")\n",
+        "cluster_summary = clustered_users.groupBy(\"prediction\").agg(\n",
+        "    avg(\"total_orders\").alias(\"avg_total_orders\"),\n",
+        "    avg(\"avg_products_per_order\").alias(\"avg_avg_products_per_order\"),\n",
+        "    avg(\"reorder_ratio\").alias(\"avg_reorder_ratio\"),\n",
+        "    avg(\"avg_days_between_orders\").alias(\"avg_avg_days_between_orders\"),\n",
+        "    avg(\"avg_order_hour\").alias(\"avg_avg_order_hour\")\n",
+        ").orderBy(\"prediction\")\n",
+        "\n",
+        "cluster_summary.show()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rSKhu1Qh79IG",
+        "outputId": "de7d4148-eb02-476d-9d49-d7fd90d551d7"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Estadísticas promedio por clúster:\n",
+            "+----------+------------------+--------------------------+------------------+---------------------------+------------------+\n",
+            "|prediction|  avg_total_orders|avg_avg_products_per_order| avg_reorder_ratio|avg_avg_days_between_orders|avg_avg_order_hour|\n",
+            "+----------+------------------+--------------------------+------------------+---------------------------+------------------+\n",
+            "|         0|1.3487042263846634|          8.07837567049106|0.4510428248678212|         15.969258182818404|17.196253328265062|\n",
+            "|         1|1.6688023656973878|        22.741766992502747|0.5433093783090136|         14.362235950423306|13.194262933875414|\n",
+            "|         2|1.3488529268201104|         7.454595802200275|0.4890164720352301|          17.07366110094821|10.129509180694255|\n",
+            "|         3|3.1565533586571863|         8.317971340244158|0.7607752098669165|          6.727431327421788|13.308658473746496|\n",
+            "+----------+------------------+--------------------------+------------------+---------------------------+------------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "16. Proponer perfiles para cada clúster (Ej: “Comprador frecuente”, “Comprador nocturno”, etc.)"
+      ],
+      "metadata": {
+        "id": "9q6l--Ff8uRY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Clúster 0: \"Los Compradores Ocasionales Nocturnos\"\n",
+        "\n",
+        "Características Clave: Este segmento realiza muy pocos pedidos (avg_total_orders bajo), con una frecuencia baja de compra (avg_avg_days_between_orders alto) y un ratio de reorden moderado. Su rasgo más distintivo es que prefieren comprar en las últimas horas de la tarde (avg_avg_order_hour más alta).\n",
+        "\n",
+        "Perfil: Son clientes que compran de forma esporádica, sin una alta recurrencia de productos, y suelen hacerlo hacia el final del día. Podrían ser usuarios nuevos o aquellos que realizan compras por necesidad puntual.\n",
+        "\n",
+        "###Clúster 1: \"Los Compradores de Carrito Grande\"\n",
+        "\n",
+        "Características Clave: Aunque no son los más frecuentes en pedidos (avg_total_orders bajo), se destacan notablemente por el gran volumen de productos que adquieren en cada transacción (avg_avg_products_per_order significativamente alto). Su ratio de reorden es moderado y su frecuencia de compra es baja, con tendencia a comprar al mediodía.\n",
+        "\n",
+        "Perfil: Clientes que hacen compras voluminosas, posiblemente para abastecerse. Son valiosos por el tamaño de sus carritos, lo que sugiere que podrían responder bien a promociones por cantidad o paquetes.\n",
+        "\n",
+        "###Clúster 2: \"Los Compradores Únicos Matutinos\"\n",
+        "\n",
+        "Características Clave: Presentan el promedio más bajo de pedidos (avg_total_orders muy bajo) y la mayor cantidad de días entre órdenes (avg_avg_days_between_orders muy alto), lo que indica una muy baja frecuencia. Su ratio de reorden también es bajo. Son distintivos por realizar sus compras predominantemente en las horas de la mañana (avg_avg_order_hour más baja).\n",
+        "\n",
+        "Perfil: Este grupo representa a clientes muy poco frecuentes, que realizan compras de forma muy espaciada y con poca tendencia a reordenar. Suelen concentrar sus actividades de compra en la primera parte del día.\n",
+        "\n",
+        "###Clúster 3: \"Los Compradores Frecuentes y Leales\"\n",
+        "\n",
+        "Características Clave: Este es el segmento más activo y valioso, con el mayor número de pedidos (avg_total_orders más alto) y la más alta frecuencia de compra (avg_avg_days_between_orders más bajo). Además, demuestran una fuerte lealtad al negocio, evidenciada por el avg_reorder_ratio más alto. La cantidad de productos por pedido es moderada y suelen comprar al mediodía.\n",
+        "\n",
+        "Perfil: Constituyen la base de clientes más fiel y recurrente. Son usuarios altamente comprometidos que realizan compras constantes y reordenan la mayoría de sus productos, siendo pilares importantes para el negocio."
+      ],
+      "metadata": {
+        "id": "x6Gqtp3J9v-p"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "guHMlLGx5bvy"
+        "id": "aBXjnqI58hNk"
       },
       "execution_count": null,
       "outputs": []
